k8s/proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: microservices-example
  name: proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy
  template:
    metadata:
      labels:
        app: proxy
    spec:
      containers:
      - image: proxy-microservices-example
        name: proxy-microservices-example
        imagePullPolicy: Never
        ports:
        - containerPort: 80
      restartPolicy: Always
status: {}
