k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: microservices-example
  name: node-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-server
  template:
    metadata:
      labels:
        app: node-server
    spec:
      containers:
      - image: microservices-example-node:prod
        name: node-server
        ports:
          - containerPort: 9000
        imagePullPolicy: Never
        resources: {}
      restartPolicy: Always
status: {}
