k8s/webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: microservices-example
  name: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - image: webapp
        imagePullPolicy: Never
        name: webapp
        ports:
          - containerPort: 3000
        resources: {}
      restartPolicy: Always
status: {}
