k8s/ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ing-service
  labels:
    app: ing
spec:
  type: NodePort
  selector:
    app: ing
  ports:
  - port: 80
    targetPort: 80
