k8s/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: microservices-example
  name: webapp
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: webapp
  type: LoadBalancer
